// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.domain.workflow_nginx;
option go_package = "github.com/chef/automate/api/config/workflow_nginx";
import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
  option (chef.automate.api.service_config) = {name: "automate-workflow-nginx"};

	V1 v1 = 1;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Log log = 2;
			chef.automate.infra.config.TLSCredentials tls = 3;

			message Log {
				google.protobuf.StringValue level = 1;
			}

          }

		message Service {}

	}
}
